crates/app-deck/tests/snapshots/snapshot__generate_downloaded.snap
---
source: crates/app-deck/tests/snapshot.rs
expression: s
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ deck · generate screen  status: saved to /Users/mohit/Music/sastaspace/99                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ tracks to generate ──────────────────────────────────────┐┌ info ────────────────────────────────┐
│  1. Main Theme  120s  epic                               ││plan id: 42                           │
│  2. Battle Loop  30s  tense                              ││job id:  99                           │
│  3. Victory  5s  triumphant                              ││                                      │
│                                                          ││Files saved to:                       │
│                                                          ││/Users/mohit/Music/sastaspace/99      │
│                                                          ││                                      │
│                                                          ││Saved to                              │
│                                                          ││/Users/mohit/Music/sastaspace/99      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ p = play first track   b = back to plan   q = quit                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
