crates/app-deck/tests/snapshots/snapshot__generate_idle.snap
---
source: crates/app-deck/tests/snapshot.rs
expression: s
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ deck · generate screen  status: idle — press Enter to start                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ tracks to generate ──────────────────────────────────────┐┌ info ────────────────────────────────┐
│  1. Main Theme  120s  epic                               ││plan id: 42                           │
│  2. Battle Loop  30s  tense                              ││                                      │
│  3. Victory  5s  triumphant                              ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Enter = start generate   b = back to plan   q = quit                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
