crates/app-deck/tests/snapshots/snapshot__plan_done.snap
---
source: crates/app-deck/tests/snapshot.rs
expression: s
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ deck · plan screen  status: plan ready ✓                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ description (i = insert mode) ───────────────────────────────────────────────────────────────────┐
│A sci-fi exploration game with dynamic soundtrack                                                 │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ tracks: 3  (← → to adjust) ──────────────────────────────────────────────────────────────────────┐
│█████████████████████████████                  3/10                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ planned tracks ──────────────────────────────────────────────────────────────────────────────────┐
│  1. Main Theme  [background]  120s  epic                                                         │
│  2. Battle Loop  [loop]  30s  tense                                                              │
│  3. Victory  [notification]  5s  triumphant                                                      │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Enter/g = generate   :approve = advance to generate screen   q = quit                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
