crates/app-deck/tests/snapshots/snapshot__plan_failed.snap
---
source: crates/app-deck/tests/snapshot.rs
expression: s
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ deck · plan screen  status: failed: description too short (min 4 chars)                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ description (i = insert mode) ───────────────────────────────────────────────────────────────────┐
│hi                                                                                                │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ tracks: 3  (← → to adjust) ──────────────────────────────────────────────────────────────────────┐
│█████████████████████████████                  3/10                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ planned tracks ──────────────────────────────────────────────────────────────────────────────────┐
│Plan failed — check status                                                                        │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ i = insert desc   ← → = track count   Enter = plan   q = quit                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
