crates/app-deck/tests/snapshots/snapshot__plan_idle.snap
---
source: crates/app-deck/tests/snapshot.rs
expression: s
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ deck · plan screen  status: idle                                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ description (i = insert mode) ───────────────────────────────────────────────────────────────────┐
│Describe the project audio you need…                                                              │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ tracks: 3  (← → to adjust) ──────────────────────────────────────────────────────────────────────┐
│█████████████████████████████                  3/10                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ planned tracks ──────────────────────────────────────────────────────────────────────────────────┐
│Enter description + press Enter to generate plan                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ i = insert desc   ← → = track count   Enter = plan   q = quit                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
