crates/app-deck/tests/snapshots/snapshot__plan_pending.snap
---
source: crates/app-deck/tests/snapshot.rs
expression: s
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ deck · plan screen  status: planning… (AI is thinking)                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ description (i = insert mode) ───────────────────────────────────────────────────────────────────┐
│A sci-fi exploration game with dynamic soundtrack                                                 │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ tracks: 5  (← → to adjust) ──────────────────────────────────────────────────────────────────────┐
│███████████████████████████████████████████████5/10                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ planned tracks ──────────────────────────────────────────────────────────────────────────────────┐
│Waiting for AI planner…                                                                           │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ i = insert desc   ← → = track count   Enter = plan   q = quit                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
